Added item component with request to getItems and mapping
